Add named access resources and services
